fixed Name spacing, updated several font-families and sizes, added sideborder to nav

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 .navbar-brand.custom {
     background-color: #4AAAA5;
     color: white;
+    font-weight: bold;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 32px;
 }
 
 .navbar-brand.custom:hover {
@@ -16,6 +19,11 @@
 .navbar-collapse {
     justify-content: flex-end;
   }
+
+  .sideborder {
+    border-right: 1px inset lightgray;
+    padding-right: 2px;
+}
 
   .bg-dark .bg-dark {
     background-color: #343a40;
@@ -39,26 +47,16 @@ body {
 }
 
 h2 {
-    color: #4AAAA5;
-    font-family: 
+    color: #4aaaa5;
+    font-size: 32px;
+    font-weight: bold;
+    font-family: Georgia, Times, "Times New Roman", serif;
 }
 
 hr {
     border: 1px solid lightgray;
 }
 
-/* Portfolio */
-.card-img-overlay {
-    position: relative;
-}
-
-.card-title {
-
-    background-color: #4AAAA5;
-    text-align: center;
-
-
-}
 
 /* About */
 
@@ -69,8 +67,40 @@ hr {
     height: auto;
 }
 
+p {
+    font-size: 16px;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 2.0;
+    color: #898B90;
+}
+
 /* Contact  */
 
+label {
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+
 .btn.btn-primary {
+    padding: 10px 30px;
+    font-size: 18px;
+    background: #4aaaa5;
+    color: white;
+}
+
+.btn.btn-primary:hover {
+    font-size:24px;
+}
+
+/* Portfolio */
+
+.card-img-overlay {
+    position: relative;
+}
+
+.card-title {
+
     background-color: #4AAAA5;
+    text-align: center;
 }
